@@ -1,3 +1,5 @@
+	* Bugfix. https://pm.cetera.ru/browse/CCD-1308
+	
 3.58.4
 
 	* BackOffice. Улучшена работа сортировки порядка полей при редактировании типа материала
